Improve memory loading